[package]
name = "nivara"
version = "0.1.0"
edition = "2021"
authors = ["Simon Sommer <creatorsisohd@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dist]
inherits = "release"
lto = "fat"

[features]
dynamic = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.10", features = ["wayland"] }
bevy_asset_loader = { version = "0.15" }
rand = { version = "0.8.5" }
